--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
-<app-contador></app-contador>
+<!-- <app-contador></app-contador> -->
 
 <!-- <app-Heroe></app-Heroe> -->
 
 
 <!-- <app-listado></app-listado> -->
+
+<app-main-page></app-main-page>
